2016-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sgi.c (ReadSGIImage): For RLE SGI image, defer memory
	allocations for as long as possible and allow the file to prove
	itself worthy before making the largest allocations.  This helps
	with rejecting bogus RLE files while avoiding rejecting valid
	files.

2016-10-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): If TIFF uses Old JPEG
	compression, then read using full tiles or strips.  Solves
	"Improper call to JPEG library in state 0. (LibJpeg)." error.
	Problem was reported via email on October 6, 2016 by John Brown.

2016-10-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateEXIFAttribute): Fixed SourceForge
	bug 400 "Exif orientation unknown for some JPEG files".  Patch
	submitted by Troy Patteson.

2016-10-02  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c Add sanity check for palette.  Merge
	RemoveLastImageFromList+AppendImageToList to ReplaceImageInList.
	Possible heap overflow of colormap in Q8 build was assigned
	CVE-2016-7996.  Assertion crash due to blob != NULL was assigned
	CVE-2016-7997.

2016-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c (parse8BIM): Fix unsigned underflow leading to
	heap overflow when parsing 8BIM chunk.  Problem was reported by
	Marco Grassi via email on October 1, 2016.  Problem was already
	known (but not fixed) based on comments in the code.  This issue
	has been assigned CVE-2016-7800.

2016-09-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c: Improve the robustness of the XCF reader by adding
	more error checking.

2016-09-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/rle.c (RLEConstrainColormapIndex): Was not constraining
	colormap index like it should be.  This problem was added on
	2016-09-23.

	* www/thanks.rst: Added Moshe Kaplan to Thanks.

	* www/Hg.rst: Mercurial URL fixes.  Patch from Mark Mitchell.
