@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020161008"
-#define public MagickPackageReleaseDate "snapshot-20161008"
+#define public MagickPackageVersionAddendum ".020161009"
+#define public MagickPackageReleaseDate "snapshot-20161009"
