@@ -1,3 +1,8 @@
+2016-10-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/xcf.c (ReadXCFImage): Fix memory leak of layer_info for
+	some recently added error-return paths.
+
 2016-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/sgi.c (ReadSGIImage): For RLE SGI image, defer memory
